--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
 .App {
   min-height: 100vh;
   display: flex;
-  background-image: url("images/background_home.jpg");
+  background-image: url("background.jpg");
   background-size: cover;
   background-position: center;
 }
